--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -6,7 +6,9 @@
 		<ion-title>Munchr</ion-title>
 		<ion-buttons end>
 		  <button ion-button icon-only (click)="view_notifications()">
-		  <ion-badge *ngIf="notifications && (notifications.requests.length > 0 || notifications.recommendations.length > 0) ">{{notifications.requests.length + notifications.recommendations.length}}</ion-badge>
+		  	<ion-badge *ngIf="notifications && (notifications.requests.length > 0 || notifications.recommendations.length > 0) ">
+		  	{{notifications.requests.length + notifications.recommendations.length}}
+		  	</ion-badge>
 		    <ion-icon name="notifications"></ion-icon>
 		  </button>
 		</ion-buttons>
