--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -20,6 +20,7 @@
 		<ion-card #mycards1 swing-card *ngFor="let c of cards">
 			<img (click)="info(c.res_id)" height="300" *ngIf="c.photo" [src]="c.photo">
 			<ion-title>{{ c.name }}</ion-title>
+			<h3 style="color: white;">{{ c.evidence }}</h3>
 			<ion-card-content *ngIf="c.location">
 				{{ c.distance }} miles away<br>
 				{{ c.location.address }}<br>
