--- a/src/pages/final/final.html
+++ b/src/pages/final/final.html
@@ -10,17 +10,19 @@
 </ion-header>
 
 <ion-content>
-	<img height="200" class="center" [src]="restaurant.photo">
+	<ion-card>
+		<img height="200" class="center" [src]="restaurant.photo">
+	</ion-card>
 	<!-- {{ restaurant.distance }} miles away <br> -->
 <!-- 	<ion-icon [name]="restaurant.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 2 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
 	<ion-icon [name]="restaurant.rating > 4 ? 'star' : 'star-outline'"></ion-icon> <br> -->
-
-	<p>Tap on the map to navigate to:<br> {{ restaurant.location.address }}</p>
-	<img [src]="map" (click)="navigate()">
-
+	<ion-card>
+		<p style="color: white; ">Tap on the map to navigate to:<br> {{ restaurant.location.address }}</p>
+		<img [src]="map" (click)="navigate()">
+	</ion-card>
 </ion-content>
 
 <ion-footer>
